--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=EEPROM_24xx1025
-version=1.0
+version=1.1.0
 author=Citriena
 maintainer=Citriena citriena@yahoo.co.jp
 sentence=Arduino library to support external Microchip I2C 24xx1025 EEPROMs.
@@ -7,6 +7,6 @@ paragraph=This library supports up to four EEPROMs on the same I2C bus as a sing
 paragraph=Supports reading & writing memory crossing page boundary, memory blocks, and devices.
 paragraph=Supports reading & writing over Arduino Wire library buffer size.
 category=Data Storage
-url=
+url=https://github.com/citriena/EEPROM_24xx1025
 architectures=*
 
